--- a/style/base.css
+++ b/style/base.css
@@ -234,3 +234,44 @@ footer {
   background: #ffffcc;
   color: grey;
 }
+@media print {  
+  @page {
+  size: 6in 4in; /* landscape */
+  margin: .25in;
+  }
+}
+.printcard {
+    display: none ;
+    poosition: absolute ;
+    left: 0 ;
+    top: 0 ;
+    border: 2px solid black ;
+    display: flex;
+    flex-flow: column nowrap;
+    width: 100%;
+    height: 100%;
+    align-items: flex-start;
+}
+.rowCard {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    width: 100%;
+    padding: 5px;
+}
+.rowCard div {
+    width: 100% ;
+}
+.printcard  table {
+    table-layout: auto;
+    border: 1px;
+  }
+.printcard  td {
+    word-wrap: break-word;
+    width: 70% ;
+  }
+.printcard  td:nth-child(1) {
+    width: 30% ;
+    font-weight: bold;
+  }
+}
