--- a/style1.css
+++ b/style1.css
@@ -9,6 +9,10 @@ main {
   padding: 10px 30px 80px;
   box-shadow: 0 3px 5px rgba(0,0,0,0.2);
 }
+#tabs {
+    display: flex;
+    flex-wrap: wrap;
+}
 p {
   font-size: 13px;
 }
@@ -22,7 +26,7 @@ label {
   font-size: 14px;
   display: block;
   float: left;
-  padding: 10px 30px;
+  padding: 5px 10px;
   border-top: 2px solid transparent;
   border-right: 1px solid transparent;
   border-left: 1px solid transparent;
@@ -32,7 +36,7 @@ label:hover {
   cursor: pointer;
   text-decoration: underline;
 }
-#tab1:checked ~ #content1, #tab2:checked ~ #content2, #tab3:checked ~ #content3, #tab4:checked ~ #content4 {
+#tab1:checked~#content1, #tab2:checked ~ #content2, #tab3:checked ~ #content3, #tab4:checked ~ #content4 {
   display: block;
 }
 input:checked + label {
