--- a/style1.css
+++ b/style1.css
@@ -1,10 +1,6 @@
-body {
-  background: #FFEFD3;
-  font-family: "Open Sans", "Arial";
-}
 main {
   background: #FFF;
-  width: 500px;
+  width: 100%;
   margin: 50px auto;
   padding: 10px 30px 80px;
   box-shadow: 0 3px 5px rgba(0,0,0,0.2);
@@ -12,6 +8,9 @@ main {
 #tabs {
     display: flex;
     flex-wrap: wrap;
+}
+.tabs {
+    font-family: "Arial";
 }
 p {
   font-size: 13px;
@@ -34,9 +33,9 @@ label {
 }
 label:hover {
   cursor: pointer;
-  text-decoration: underline;
+  color: red;
 }
-#tab1:checked~#content1, #tab2:checked ~ #content2, #tab3:checked ~ #content3, #tab4:checked ~ #content4 {
+#tab_picture:checked~#Content_picture, #tab_demo:checked ~ #Content_demo, #tab_medical:checked ~ #Content_medical, #tab_procedures:checked ~ #Content_procedures  #tab_comments:checked ~ #Content_comments {
   display: block;
 }
 input:checked + label {
