uccess at operations and added main menu (not yet populated)

--- a/style/base.css
+++ b/style/base.css
@@ -309,8 +309,9 @@ footer {
 .screen {
     display: block ;
 }
-#PatientPhotoContent {
+#PatientPhotoContent, #MainMenuContent {
   display: flex ;
+  background: #b3b3ff ;
   justify-content: center;
   align-items: center;
   flex-direction: column ; 
