Now working date and date/time Need to fix length

--- a/style/base.css
+++ b/style/base.css
@@ -343,7 +343,7 @@ footer {
     rows: 3;
     cols: 35;
 }
-/* Datepicker https://code-boxx.com/simple-datepicker-pure-javascript-css/#sec-download */
+/* Datepicker https://code-boxx.com/simple-datepicker-pure-javascript-css */
 /* (A) POPUP */
 .picker-wrap {
   position: fixed;
