improve printing more

--- a/style/base.css
+++ b/style/base.css
@@ -267,11 +267,12 @@ footer {
 }
 @media print {  
   @page {
-  size: 6in 4in; /* landscape */
-  margin: 0;
+    size: 6in 4in portrait; /* landscape */
+    margin: 0;
   }
 }
 #printCard {
+  margin: .3in ;
     position: absolute ;
     background: lightgrey ;
     left: 0 ;
@@ -282,6 +283,9 @@ footer {
     width: 100%;
     height: 100%;
     align-items: flex-start;
+    page-break-before: avoid;
+    page-break-inside: avoid;
+    page-break-after: avoid;
 }
 .rowCard {
     display: flex;
@@ -362,17 +366,17 @@ footer {
     display: none ;
 }
 #UserNameContent {
-	background: #5e6cc7;
-	color: white;
-	display: flex ;
-	justify-content: center;
-	align-items: center;
+  background: #5e6cc7;
+  color: white;
+  display: flex ;
+  justify-content: center;
+  align-items: center;
 }
 #footerflex {
-	display: flex;
-	color: white;
-	flex-flow: row wrap;
-	justify-content: space-around;
+  display: flex;
+  color: white;
+  flex-flow: row wrap;
+  justify-content: space-around;
 }
 /* Datepicker https://code-boxx.com/simple-datepicker-pure-javascript-css */
 /* (A) POPUP */
