--- a/style/base.css
+++ b/style/base.css
@@ -196,6 +196,17 @@ footer {
   display: inline-block;
   height: auto ;
 }
+.FloatPicture {
+    position: absolute;
+    z-index: 1;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    top: 0px;
+    max-height: 100% ;
+    max-width: auto ;
+}
 @media only and (orientation: landscape) {
   .entryfield_image {
     max-height: 20%;
