Lots of changes: 1. Javascript Lint to find syntax errors 2. Add Admin for database user, including an email service 3. Remove IBM as default 4. username now means something -- it's the name in the _user couchdb central database 5. Clean up tabes and add user table 6. Add a password type to PatientData

--- a/style/base.css
+++ b/style/base.css
@@ -338,14 +338,14 @@ footer {
   background: #3366CC;
 }
   
-#PatientPhotoContent {
+#PatientPhotoContent{
   display: flex ;
   background: #b3b3ff ;
   justify-content: center;
   align-items: center;
   flex-direction: row ; 
 }
-#MainMenuContent {
+#MainMenuContent, #DownloadContent, #AdministrationContent,  #SendUserContent {
   display: flex ;
   background: #b3b3ff ;
   justify-content: center;
